Вроде всё. Осталось немного по стилям доделать

--- a/ProductProgamming04042025/Pages/Index.cshtml
+++ b/ProductProgamming04042025/Pages/Index.cshtml
@@ -99,7 +99,7 @@
                                                 {
                                                     <div class="item">
                                                         <div class="title">
-                                                            @exercise.Name
+                                                            @Html.Raw(exercise.Name)
                                                         </div>
                                                         <div class="content">
                                                             @exercise.Count
@@ -122,7 +122,7 @@
                                                 {
                                                     <div class="item">
                                                         <div class="title">
-                                                            @meal.Name
+                                                            @Html.Raw(meal.Name)
                                                         </div>
                                                         <div class="content">
                                                             @meal.Count
