--- a/ProductProgamming04042025/Pages/Login.cshtml
+++ b/ProductProgamming04042025/Pages/Login.cshtml
@@ -29,8 +29,7 @@
                 </label>
                 <label class="input">
                     <span>
-                        <span>Пароль</span>
-                        <a asp-page="/PasswordRecoveryStart">Забыли пароль?</a>
+                        Пароль
                     </span>
                     <input asp-for="Input.Password" type="password" name="password" id="password"
                         placeholder="Введите логин" autocomplete="off" required>
