--- a/ProductProgamming04042025/wwwroot/css/registration.css
+++ b/ProductProgamming04042025/wwwroot/css/registration.css
@@ -10,6 +10,9 @@ main{
 }
 
 @media (max-width: 656px) {
+    main{
+        margin-top: 60px;
+    }       
     #content {
         height: auto;
         padding-top: 57px;
