--- a/ProductProgamming04042025/wwwroot/css/auth.css
+++ b/ProductProgamming04042025/wwwroot/css/auth.css
@@ -28,7 +28,7 @@ body{
 }
 
 #form{
-    margin-top: 105px;
+    margin-top: 65px;
     padding: 0 47px;
     display: flex;
     flex-direction: column;
@@ -64,15 +64,24 @@ body{
     background-color: var(--blue);
 }
 
+#logo>h1{
+    font-family: 'Fugaz One';
+    font-size: 75px;
+}
+
 
 @media (max-width: 656px) {
-    
+
+#logo>h1{
+    font-family: 'Fugaz One';
+    font-size: 36px;
+}
     #content{
         width: 450px;
         height: 595px;
     }
     #form{
-        margin-top: 65px;
+        margin-top: 25px;
     }
     
 
@@ -82,6 +91,6 @@ body{
         width: 320px;
     }
     #form{
-        margin-top: 65px;
+        margin-top: 25px;
     }
 }
