--- a/ProductProgamming04042025/wwwroot/css/settings.css
+++ b/ProductProgamming04042025/wwwroot/css/settings.css
@@ -16,16 +16,16 @@
     justify-content: center;
 }
 
-a.exit-button{
-    margin-top: 70px;
-    color: black;
-    text-decoration: none;
-    padding: 17px 0;
-    border-radius: 10px;
-    width: 203px;
-    background-color: var(--red-button);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+button.exit-button{
+    margin-top: 70px !important;
+    color: black !important;
+    text-decoration: none !important;
+    padding: 17px 0 !important;
+    border-radius: 10px !important;
+    width: 203px !important;
+    background-color: var(--red-button) !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
 }
 
