--- a/ProductProgamming04042025/wwwroot/css/shell.css
+++ b/ProductProgamming04042025/wwwroot/css/shell.css
@@ -83,6 +83,7 @@ body>main {
 
 #shell {
     position: relative;
+    z-index: 999;
 }
 
 .hide-shell:hover {
@@ -139,9 +140,9 @@ body>main {
 }
 
 #shell-navigation>.nav-item:hover>.content {
-    -webkit-box-shadow: 0px 0px 15px 0px rgba(222, 230, 231, 0.9) inset;
-    -moz-box-shadow: 0px 0px 15px 0px rgba(222, 230, 231, 0.9) inset;
-    box-shadow: 0px 0px 15px 0px rgba(222, 230, 231, 0.9) inset;
+    -webkit-box-shadow: 0px 0px 15px 0px rgb(249, 226, 255, 0.9) inset;
+    -moz-box-shadow: 0px 0px 15px 0px rgb(249, 226, 255, 0.9) inset;
+    box-shadow: 0px 0px 15px 0px rgb(249, 226, 255, 0.9) inset;
 }
 
 #shell-navigation>.nav-item.selected>.content {
