--- a/ProductProgamming04042025/wwwroot/css/toast.css
+++ b/ProductProgamming04042025/wwwroot/css/toast.css
@@ -11,6 +11,7 @@
     -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
     transition: 0.5s ease;
+    z-index: 1000;
 }
 
 .toast.centred.state-1{
