--- a/ProductProgamming04042025/wwwroot/fonts/fontface.css
+++ b/ProductProgamming04042025/wwwroot/fonts/fontface.css
@@ -16,3 +16,12 @@
     font-display: swap;
 }
 
+@font-face {
+    font-family: 'Fugaz One';
+    src: url('FugazOne-Regular.woff2') format('woff2'),
+        url('FugazOne-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
